per feedback plus drive-by edits

--- a/modules/installation-and-upgrade/pages/container-deployment/uyuni/proxy-deployment-uyuni.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/uyuni/proxy-deployment-uyuni.adoc
@@ -60,16 +60,14 @@ This table shows the hardware requirements for deploying {productname} Proxy.
 | Minimum 40 GB
 
 |
-| [path]``/var/lib/containers/storage/volumes/srv-www``
+| [path]``/var/lib/containers/storage/volumes``
 | Minimum 100 GB, Storage requirements should be calculated for the number of ISO distribution images, containers, and bootstrap repositories you will use.
-
-|
-| [path]``/var/lib/containers/storage/volumes/var-cache`` (Squid)
-| Minimum 100 GB
 
 |===
 
-== Container Host general requirements
+
+
+== Container Host General Requirements
 
 For general requirements, see xref:installation-and-upgrade:general-requirements.adoc[General requirements].
 
@@ -90,7 +88,7 @@ To guarantee that clients can resolve the FQDN domain name, both the containeriz
 ====
 
 
-== Installing Uyuni tools for use with containers
+== Installing Uyuni Tools for Use with Containers
 
 
 .Procedure: Installing Uyuni Tools on {leapmicro} {microversion}
@@ -294,7 +292,7 @@ And should be part of the [literal]``proxy-pod`` container pod.
 
 
 
-=== Using a custom container image for a service
+=== Using a Custom Container Image for a Service
 
 By default, the {productname} Proxy suite is set to use the same image version and registry path for each of its services.
 However, it is possible to override the default values for a specific service using the install parameters ending with [literal]``-tag`` and [literal]``-image``.
