--- a/modules/installation-and-upgrade/nav-installation-and-upgrade-guide.adoc
+++ b/modules/installation-and-upgrade/nav-installation-and-upgrade-guide.adoc
@@ -24,7 +24,7 @@ endif::[]
 ifeval::[{uyuni-content} == true]
 ** Deployment and Installation
 *** Server
-**** xref:container-deployment/uyuni/server-deployment-uyuni.adoc[Deploy on {leap}]
+**** xref:container-deployment/uyuni/server-deployment-uyuni.adoc[Deploy on {leapmicro}]
 **** xref:container-deployment/uyuni/server-air-gapped-deployment-uyuni.adoc[Air-gapped Deployment]
 *** Install the Server (Legacy)
 **** xref:install-uyuni.adoc[Install Uyuni Server with openSUSE]
