adjust checklist (per feedback)

--- a/modules/installation-and-upgrade/pages/container-deployment/uyuni/proxy-deployment-uyuni.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/uyuni/proxy-deployment-uyuni.adoc
@@ -6,16 +6,17 @@ endif::[]
 
 
 This guide outlines the deployment process for the {productname} {productnumber} Proxy.
-This guide presumes you have already successfully deployed a {productname} {productnumber} Server. 
+This guide presumes you have already successfully deployed a {productname} {productnumber} Server.
 To successfully deploy, you will perform the following actions:
 
 
 .Checklist: Proxy Deployment
 . Review hardware requirements.
-. Synchronize the {leapmicro} {microversion} parent channel and the Proxy extension child channel on the server.
++
+// . Synchronize the {leapmicro} {microversion} parent channel and the Proxy extension child channel on the server.
 . Install {leapmicro} {microversion} on a bare-metal machine.
-. During the installation, register {leapmicro} {microversion} along with the {productname} {productnumber} Proxy extension.
-. Create a {salt} activation key.
++
+// . Create a {salt} activation key.
 . Bootstrap the Proxy as a {salt} minion.
 . Generate a Proxy configuration.
 . Transfer the Proxy configuration from Server to Proxy
