adjustments from master version

--- a/modules/installation-and-upgrade/pages/container-deployment/uyuni/proxy-deployment-uyuni.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/uyuni/proxy-deployment-uyuni.adoc
@@ -99,11 +99,9 @@ To guarantee that clients can resolve the FQDN domain name, both the containeriz
 
 . Enter the [command]``transactional-update shell``:
 +
-
 ----
 transactional-update shell
 ----
-+
 
 . Add the following repository to your {leapmicro} {microversion} server:
 +
@@ -111,14 +109,12 @@ transactional-update shell
 ----
 zypper ar https://download.opensuse.org/repositories/systemsmanagement:/Uyuni:/Stable:/ContainerUtils/openSUSE_Leap_Micro_5.5/systemsmanagement:Uyuni:Stable:ContainerUtils.repo
 ----
-+
 
 . Refresh the repository list and accept the key:
 +
 ----
 zypper ref
 ----
-+
 
 . Install the container tools:
 +
@@ -128,6 +124,10 @@ zypper ref
 zypper in mgrpxy mgrpxy-bash-completion uyuni-storage-setup-proxy
 ----
 +
+[NOTE]
+====
+Alternatively you may install [systemitem]``mgrpxy-zsh-completion`` or [systemitem]``mgrpxy-fish-completion``.
+====
 
 . Exit the transactional shell:
 +
@@ -138,7 +138,7 @@ transactional update # exit
 . Reboot the host.
 
 ////
-// In master, we had:
+// In master, we had already this reduced variant:
 
 ----
 transactional-update
@@ -149,16 +149,17 @@ transactional-update
 . Install the container utilities:
 +
 
-[NOTE]
-====
-Alternatively you may install [systemitem]``mgrpxy-zsh-completion`` or [systemitem]``mgrpxy-fish-completion``.
-====
-+
-
 [source, shell]
 ----
 transactional-update pkg install mgrpxy mgrpxy-bash-completion
 ----
++
+
+[NOTE]
+====
+Alternatively you may install [systemitem]``mgrpxy-zsh-completion`` or [systemitem]``mgrpxy-fish-completion``.
+====
+
 ////
 
 For more information on the Uyuni Container Utilities, see link:https://build.opensuse.org/repositories/systemsmanagement:Uyuni:Stable:ContainerUtils[Uyuni Container Utilities].
