fix table in reference guide system details (per feedback)

--- a/modules/reference/pages/systems/system-details/sd-overview.adoc
+++ b/modules/reference/pages/systems/system-details/sd-overview.adoc
@@ -165,7 +165,7 @@ By default, this is automatically gathered when the client is registered, but it
 
 | Location
 | The physical location of the client.
-| By default, this is not set, but it can be added.
+By default, this is not set, but it can be added.
 
 |===
 
