--- a/modules/reference/pages/systems/system-details/sd-overview.adoc
+++ b/modules/reference/pages/systems/system-details/sd-overview.adoc
@@ -170,7 +170,7 @@ By default, this is automatically gathered when the client is registered, but it
 
 | Location
 | The physical location of the client.
-| By default, this is not set, but it can be added.
+By default, this is not set, but it can be added.
 
 |===
 
