spelling vmware https://github.com/SUSE/spacewalk/issues/24691

--- a/modules/client-configuration/nav-client-configuration-guide.adoc
+++ b/modules/client-configuration/nav-client-configuration-guide.adoc
@@ -152,7 +152,7 @@ endif::[]
 *** xref:vhm-azure.adoc[VHM and Azure]
 *** xref:vhm-gce.adoc[VHM and GCE]
 *** xref:vhm-nutanix.adoc[VHM and Nutanix]
-*** xref:vhm-vmware.adoc[VHM and VMWare]
+*** xref:vhm-vmware.adoc[VHM and VMware]
 *** xref:vhm-file.adoc[VHM with Other Hosts]
 
 
