--- a/modules/client-configuration/pages/vhm-file.adoc
+++ b/modules/client-configuration/pages/vhm-file.adoc
@@ -3,7 +3,7 @@
 
 If you want to use a third-party virtualization provider other than Xen, KVM, or VMware,  you can import a JSON configuration file to {productname}.
 
-Similarly, if you have a VMWare installation that does not provide direct access to the API, a file-based VHM provides you with some basic management features.
+Similarly, if you have a VMware installation that does not provide direct access to the API, a file-based VHM provides you with some basic management features.
 
 [NOTE]
 ====
