--- a/modules/client-configuration/pages/vhm-vmware.adoc
+++ b/modules/client-configuration/pages/vhm-vmware.adoc
@@ -1,7 +1,7 @@
 [[virt-vmware]]
-= Virtualization with VMWare
+= Virtualization with VMware
 
-You can use VMWare vSphere virtual machines, including ESXi and vCenter, with {productname} by setting up a virtual host manager (VHM).
+You can use VMware vSphere virtual machines, including ESXi and vCenter, with {productname} by setting up a virtual host manager (VHM).
 
 To begin, you need to set up a VHM on your {productname} Server, and inventory the available VM hosts.
 Taskomatic can then begin data collection using the VMs API.
@@ -13,22 +13,22 @@ Taskomatic can then begin data collection using the VMs API.
 
 The Virtual Host Manager (VHM) runs on the {productname} Server.
 
-To run a VHM, your {productname} Server needs to have port 443 open, to access the VMWare API.
+To run a VHM, your {productname} Server needs to have port 443 open, to access the VMware API.
 
-VMWare hosts use access roles and permissions to control access to hosts and guests.
-Ensure that any VMWare objects or resources that you want to be inventoried by the VHM have at least [parameter]``read-only`` permissions.
+VMware hosts use access roles and permissions to control access to hosts and guests.
+Ensure that any VMware objects or resources that you want to be inventoried by the VHM have at least [parameter]``read-only`` permissions.
 If you want to exclude any objects or resources, mark them with [parameter]``no-access``.
 
 When you are adding new hosts to {productname}, you need to consider if the roles and permissions that have been assigned to users and objects need to be inventoried by {productname}.
 
-For more on users, roles, and permissions, see the VMWare vSphere documentation: https://docs.vmware.com/en/VMware-vSphere/index.html
+For more on users, roles, and permissions, see the VMware vSphere documentation: https://docs.vmware.com/en/VMware-vSphere/index.html
 
 
-.Procedure: Creating a VMWare VHM
+.Procedure: Creating a VMware VHM
 
 . In the {productname} {webui}, navigate to menu:Systems[Virtual Host Managers].
-. Click btn:[Create] and select [guimenu]``VMWare-based``.
-. In the [guimenu]``Add a VMWare-based Virtual Host Manager`` section, use these parameters:
+. Click btn:[Create] and select [guimenu]``VMware-based``.
+. In the [guimenu]``Add a VMware-based Virtual Host Manager`` section, use these parameters:
 * In the [guimenu]``Label`` field, type a custom name for your VHM.
 * In the [guimenu]``Hostname`` field, type the fully qualified domain name (FQDN) or host IP address.
 * In the [guimenu]``Port`` field, type the ESXi API port to use (for example, [parameter]``443``).
@@ -59,14 +59,14 @@ Log files for the [command]``virtual-host-gatherer`` tool are located at [path]`
 
 
 
-== Troubleshooting SSL Errors on VMWare
+== Troubleshooting SSL Errors on VMware
 
-If you see SSL errors while configuring your VMWare installation, you need to download the CA certificate file from VMWare, and trust it on {productname}.
+If you see SSL errors while configuring your VMware installation, you need to download the CA certificate file from VMware, and trust it on {productname}.
 
 
 
-.Procedure: Trusting VMWare CA Certificates
-. Download the CA Certificate from your VMWare installation.
+.Procedure: Trusting VMware CA Certificates
+. Download the CA Certificate from your VMware installation.
     You can do this by logging in to your vCenter {webui}, and clicking btn:[Download trusted root CA certificates].
 . If the downloaded CA certificates file is in ``.zip`` format, extract the archive.
     The certificate files have a number as an extension.
