--- a/modules/client-configuration/nav-client-configuration-guide.adoc
+++ b/modules/client-configuration/nav-client-configuration-guide.adoc
@@ -122,7 +122,7 @@ endif::[]
 *** xref:vhm-gce.adoc[VHM and GCE]
 *** xref:vhm-kubernetes.adoc[VHM and Kubernetes]
 *** xref:vhm-nutanix.adoc[VHM and Nutanix]
-*** xref:vhm-vmware.adoc[VHM and VMWare]
+*** xref:vhm-vmware.adoc[VHM and VMware]
 *** xref:vhm-file.adoc[VHM with Other Hosts]
 
 
