--- a/modules/administration/pages/troubleshooting/tshoot-registerclones.adoc
+++ b/modules/administration/pages/troubleshooting/tshoot-registerclones.adoc
@@ -80,6 +80,8 @@ rm -rf /etc/venv-salt-minion/pki
 +
 ----
 service salt-minion restart
+For Salt Bundle clients: 
+service venv-salt-minion restart
 ----
 . Re-register the clients.
   Each client now has a different [path]``/etc/machine-id`` and should be correctly displayed on the [guimenu]``System Overview`` page.
