--- a/modules/administration/pages/troubleshooting/tshoot-registerclones.adoc
+++ b/modules/administration/pages/troubleshooting/tshoot-registerclones.adoc
@@ -76,11 +76,18 @@ For Salt Bundle clients:
 rm /etc/venv-salt-minion/minion_id
 rm -rf /etc/venv-salt-minion/pki
 ----
-. Delete accepted keys from the onboarding page and the system profile from {productname}, and restart the client with:
+. Delete accepted keys from the onboarding page and the system profile from {productname}, and restart the client with.
+  For Salt Minion clients:
 +
 ----
 service salt-minion restart
+----
++
+
 For Salt Bundle clients: 
++
+
+----
 service venv-salt-minion restart
 ----
 . Re-register the clients.
