--- a/modules/installation-and-upgrade/pages/container-deployment/suma/server-deployment-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/server-deployment-suma.adoc
@@ -224,6 +224,20 @@ For more information, see xref:installation-and-upgrade:container-management/per
 ====
 
 
+
+==== Troubleshhoting Full Disk Event
+
+    Increase the disk (e.g. /dev/vdb) size (e.g. if the disk is a QCOW2 image, use the command qemu-img resize)
+    Ensure the Partition Uses All Available Space:
+        open a shell in the container using mgrctl term
+        sudo parted /dev/vdb
+        (parted) print
+        (parted) resizepart NUMBER 100% where NUMBER is the partition number shown by print command (e.g. 1 if /dev/vdb1
+        (parted) quit
+    resize the filesystem. e.g for a XFS file system run in a shell inside the container: sudo xfs_growfs /dev/vdb1
+
+After these steps, your XFS filesystem on /dev/vdb1 should now be using all the available space on the disk.
+
 == Deploy with mgradm
 
 .Procedure: Deploy {productname} {productnumber} Using mgradm
