Update tshoot-registerclones.adoc (#3300)
Add missing Salt bundle minion restart command
Co-authored-by: Karl Eichwalder <ke@suse.de>

--- a/modules/administration/pages/troubleshooting/tshoot-registerclones.adoc
+++ b/modules/administration/pages/troubleshooting/tshoot-registerclones.adoc
@@ -76,10 +76,19 @@ For Salt Bundle clients:
 rm /etc/venv-salt-minion/minion_id
 rm -rf /etc/venv-salt-minion/pki
 ----
-. Delete accepted keys from the onboarding page and the system profile from {productname}, and restart the client with:
+. Delete accepted keys from the onboarding page and the system profile from {productname}, and restart the client with.
+  For Salt Minion clients:
 +
 ----
 service salt-minion restart
+----
++
+
+For Salt Bundle clients: 
++
+
+----
+service venv-salt-minion restart
 ----
 . Re-register the clients.
     Each client now has a different [path]``/etc/machine-id`` and should be correctly displayed on the [guimenu]``System Overview`` page.
