old postgresql version no longer needed (#3266)
https://github.com/SUSE/spacewalk/issues/25076
https://bugzilla.suse.com/show_bug.cgi?id=1216744

--- a/modules/installation-and-upgrade/pages/db-migration-xy.adoc
+++ b/modules/installation-and-upgrade/pages/db-migration-xy.adoc
@@ -111,3 +111,9 @@ If the upgrade fails, the migration script will attempt to restore the database 
 ----
 . When the upgrade has successfully completed, you can safely delete the old database directory and reclaim lost disk space.
   The old directory is renamed to [path]``/var/lib/pgsql/data-pg12`` or [path]``/var/lib/pgsql/data-pg10``, depending on the version you started from.
+
+
+[NOTE]
+====
+After a successful database migration, the old version of the {postgresql} database software is no longer needed.
+====
