add missing volume to documentation
Signed-off-by: Ricardo Mateus <rmateus@suse.com>

--- a/modules/installation-and-upgrade/pages/container-management/persistent-container-volumes.adoc
+++ b/modules/installation-and-upgrade/pages/container-management/persistent-container-volumes.adoc
@@ -108,6 +108,9 @@ The following  volumes are stored under the **Podman** default storage location.
 | **etc-salt**
 | [path]``/etc/salt``
 
+| **etc-sssd**
+| [path]``/etc/sssd``
+
 | **etc-tomcat**
 | [path]``/etc/tomcat``
 
