--- a/modules/installation-and-upgrade/pages/container-deployment/suma/server-deployment-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/server-deployment-suma.adoc
@@ -197,7 +197,7 @@ transactional-update
 === Configure Custom Persistent Storage
 
 Configuring persistent storage is optional, but it is the only way to avoid serious trouble with container full disk conditions.
-It ist highly recommended to configure custom persistent storage with the [command]``mgr-storage-server`` tool.
+It is highly recommended to configure custom persistent storage with the [command]``mgr-storage-server`` tool.
 
 * For more information, see [command]``mgr-storage-server --help``.
 This tool simplifies creating the container storage and database volumes.
