move to adminguide and cosmetic changes

--- a/modules/administration/nav-administration-guide.adoc
+++ b/modules/administration/nav-administration-guide.adoc
@@ -67,6 +67,7 @@ endif::[]
 *** xref:troubleshooting/tshoot-autoinstallation.adoc[Autoinstallation]
 *** xref:troubleshooting/tshoot-bootstrap-repo-for-eol-products.adoc[Bootstrap Repository for End-of-Life Product]
 *** xref:troubleshooting/tshoot-cloned-salt-clients.adoc[Cloned Salt Clients]
+*** xref:troubleshooting/tshoot-container-full-disk.adoc[Container with Full Disk]
 *** xref:troubleshooting/tshoot-corruptrepo.adoc[Corrupt Repositories]
 *** xref:troubleshooting/tshoot-custom-channel.adoc[Custom Channel]
 *** xref:troubleshooting/tshoot-disabling-fqdns-grain.adoc[Disabling the FQDNS grain]
