add more xref to tshoot

--- a/modules/installation-and-upgrade/pages/container-deployment/suma/proxy-deployment-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/proxy-deployment-suma.adoc
@@ -183,6 +183,8 @@ transactional-update pkg install mgrpxy mgrpxy-bash-completion
 
 . Reboot the system.
 
+
+
 === Configure Custom Persistent Storage
 
 This step is optional.
@@ -209,7 +211,10 @@ mgr-storage-proxy /dev/nvme1n1
 ====
 This command will create the persistent storage volumes at [path]``/var/lib/containers/storage/volumes``.
 
-For more information, see xref:installation-and-upgrade:container-management/persistent-container-volumes.adoc[].
+For more information, see
+
+* xref:installation-and-upgrade:container-management/persistent-container-volumes.adoc[]
+* * xref:administration:troubleshooting/tshoot-container-full-disk.adoc[]
 ====
 
 == Create an Activation Key for the Proxy
