--- a/modules/installation-and-upgrade/pages/container-deployment/suma/server-deployment-vm-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/server-deployment-vm-suma.adoc
@@ -168,7 +168,10 @@ mgr-storage-server /dev/nvme1n1 /dev/nvme2n1
 ====
 This command will create the persistent storage volumes at [path]``/var/lib/containers/storage/volumes``.
 
-For more information, see xref:installation-and-upgrade:container-management/persistent-container-volumes.adoc[].
+For more information, see
+
+* xref:installation-and-upgrade:container-management/persistent-container-volumes.adoc[]
+* xref:administration:troubleshooting/tshoot-container-full-disk.adoc[]
 ====
 . Otherwise run the following command to deploy {productname}:
 +
