--- a/modules/installation-and-upgrade/pages/container-deployment/uyuni/proxy-deployment-uyuni.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/uyuni/proxy-deployment-uyuni.adoc
@@ -190,7 +190,10 @@ mgr-storage-proxy /dev/nvme1n1
 ====
 This command will create the persistent storage volumes at [path]``/var/lib/containers/storage/volumes``.
 
-For more information, see xref:installation-and-upgrade:container-management/persistent-container-volumes.adoc[].
+For more information, see
+
+* xref:installation-and-upgrade:container-management/persistent-container-volumes.adoc[]
+* xref:administration:troubleshooting/tshoot-container-full-disk.adoc[]
 ====
 
 
