--- a/modules/installation-and-upgrade/pages/container-deployment/uyuni/server-deployment-uyuni.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/uyuni/server-deployment-uyuni.adoc
@@ -175,7 +175,8 @@ By default [command]``podman`` stores its volumes in [path]``/var/lib/containers
 
 You can provide custom storage for the volumes by mounting disks on this path or the expected volume path inside it such as: [path]``/var/lib/containers/storage/volumes/var-spacewalk``. This is especially important for the database and package mirrors. 
 
-For a list of all persistent volumes in the container, see  xref:installation-and-upgrade:container-management/persistent-container-volumes.adoc[].
-
+For a list of all persistent volumes in the container, see
+* xref:installation-and-upgrade:container-management/persistent-container-volumes.adoc[]
+* xref:administration:troubleshooting/tshoot-container-full-disk.adoc[]
 
 
