persistent storage; container full disk (#3275)
* persistent storage; container full disk
https://github.com/SUSE/spacewalk/issues/24512
* Update modules/installation-and-upgrade/pages/container-deployment/suma/server-deployment-suma.adoc
Co-authored-by: Ornela Marić <omaric@suse.com>
* move resize procedure to Admin Guide
* ucf

--- a/modules/installation-and-upgrade/pages/container-deployment/suma/server-deployment-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/server-deployment-suma.adoc
@@ -196,8 +196,8 @@ transactional-update
 
 === Configure Custom Persistent Storage
 
-This step is optional.
-However, if custom persistent storage is required for your infrastructure, use the [command]``mgr-storage-server`` tool.
+Configuring persistent storage is optional, but it is the only way to avoid serious trouble with container full disk conditions.
+It is highly recommended to configure custom persistent storage with the [command]``mgr-storage-server`` tool.
 
 * For more information, see [command]``mgr-storage-server --help``.
 This tool simplifies creating the container storage and database volumes.
@@ -220,8 +220,12 @@ mgr-storage-server /dev/nvme1n1 /dev/nvme2n1
 ====
 This command will create the persistent storage volumes at [path]``/var/lib/containers/storage/volumes``.
 
-For more information, see xref:installation-and-upgrade:container-management/persistent-container-volumes.adoc[].
+For more information, see
+
+* xref:installation-and-upgrade:container-management/persistent-container-volumes.adoc[]
+* xref:administration:troubleshooting/tshoot-container-full-disk.adoc[]
 ====
+
 
 
 == Deploy with mgradm
