Updated outdated links.

--- a/modules/retail/pages/retail-next.adoc
+++ b/modules/retail/pages/retail-next.adoc
@@ -11,10 +11,8 @@ If you need further information or support, try one of these options.
 
 For {productname} documentation, visit https://documentation.suse.com/suma/4.3/.
 
-For legacy {slepos} documentation, see https://documentation.suse.com/sle-pos/11-SP3/.
-For legacy {productname} {smr} documentation, see https://documentation.suse.com/suma-retail/4.1/.
-Note, however, that {productname} {smr} documentation supersedes this information.
-
+Legacy documentation is available upon request for information purposes only.
+Note, however, that {productname} {smr} documentation supersedes legacy information.
 
 
 [[retail.sect.next.support]]
