use owner and group name for clarity

--- a/modules/installation-and-upgrade/pages/hardware-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/hardware-requirements.adoc
@@ -227,11 +227,7 @@ However, it is recommended that the volumes are stored on one or more separate s
 Such a setup helps avoid data loss in production environments.
 This can be done after container deployment.
 
-// FIXME: continue here
-
-and optionally channels with the repositories and the database for {productname} are stored on separate storage devices.
-
-Storage devices must be set up prior to deploying the container.
+Storage devices best should be set up after first deploying the container.
 For more details, see xref:installation-and-upgrade:container-management/persistent-container-volumes.adoc[Persistent Container Volumes].
 
 {productname} requires three different volumes:
@@ -297,11 +293,11 @@ The output should look like this:
 ----
 /var/lib/containers/storage/volumes/var-pgsql:
 total 0
-drwxr-x--- 1 10556 10556 48 Apr 19 14:33 _data
+drwxr-x--- 1 postgres postgres 48 Apr 19 14:33 _data
 
 /var/lib/containers/storage/volumes/var-spacewalk:
 total 0
-drwxr-xr-x 1 10552 root  30 Apr 19 14:34 _data
+drwxr-xr-x 1 wwwrun   www      30 Apr 19 14:34 _data
 ----
 
 If required, change the permissions with these commands:
@@ -330,10 +326,10 @@ The disk setup is virtual and separate disks for volumes are possible and recomm
 // container-deployment/suma/server-deployment-suma.adoc
 For other deployments, separate disks for volumes are also recommended.
 
-On the {productname} Server, the [command]``mgr-storage-server`` command moves the complete content of the [path]``volumes`` directory to a separate disk and remounts it to [path]``/var/lib/containers/storage/volumes``.
-Optionally, if a second device name is specified, [command]``mgr-storage-server`` moves the content of the [literal]``var-pgsql`` database directory also to a separate disk and remounts it to [path]``/var/lib/containers/storage/volumes/var-pgsql``.
+On the {productname} Server, the [command]``mgr-storage-server`` command moves the complete content of the [path]``/var/lib/containers/storage/volumes`` directory to a separate disk and remounts it to [path]``/var/lib/containers/storage/volumes``.
+Optionally, if a second device name is specified, [command]``mgr-storage-server`` moves the content of the [literal]``/var/lib/containers/storage/volumes/var-pgsql`` database directory also to a second separate disk and remounts it to [path]``/var/lib/containers/storage/volumes/var-pgsql``.
 
-Similarily on the {productname} Proxy, the [command]``mgr-storage-proxy`` command moves the complete content of the [path]``volumes`` directory with the Squid cache to a separate disk and remounts it to [path]``/var/lib/containers/storage/volumes``.
+Similarily on the {productname} Proxy, the [command]``mgr-storage-proxy`` command moves the complete content of the [path]``/var/lib/containers/storage/volumes`` directory with the Squid cache to a separate disk and remounts it to [path]``/var/lib/containers/storage/volumes``.
 
 
 
