cont. (per feedback)

--- a/modules/installation-and-upgrade/pages/hardware-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/hardware-requirements.adoc
@@ -73,6 +73,12 @@ For more information about filesystem and partitioning details, see xref:install
 Add 100 MB per {suse} product, 1 GB per {redhat} or other product.
 Consider to double the space if the server is used for Inter-Server Synchronization (ISS)
 
+|
+| [path]``/var/lib/containers/storage/volumes/srv-www``
+| Minimum 100 GB
+
+* Storage requirments should be calculated for the number of ISO distribution images, containers, and bootstrap repositories you will use.
+
 |===
 
 
@@ -80,8 +86,10 @@ The images by default have a 20 GB [literal]``/`` partition.
 The cloud image of {sle-micro} 5.5 has just a 5 GB [literal]``/`` partition. Both work flawlessly with {productname}.
 As long as external storage is mounted to [path]``/var/lib/containers/storage/volumes``, {productname} does not need or use storage on the [literal]``/`` partition, but leaves that to the management of the container host itself.
 
+
+
 ////
-// When uncommenting verify the details!
+// When uncommenting verify the details! (POWER)
 
 ifeval::[{suma-content} == true]
 [cols="1,3,2", options="header"]
@@ -127,6 +135,12 @@ Add 100{nbsp}MB per {suse} product, 1{nbsp}GB per {redhat} or other product.
 Double the space if the server is an ISS Master.
 
 |
+| [path]``/var/lib/containers/storage/volumes/srv-www``
+| Minimum 100 GB
+
+* Storage requirments should be calculated for the number of ISO distribution images, containers, and bootstrap repositories you will use.
+
+|
 | Swap space
 | 3{nbsp}GB
 
@@ -135,6 +149,8 @@ Double the space if the server is an ISS Master.
 endif::[]
 
 ////
+
+
 
 [IMPORTANT]
 ====
