--- a/modules/installation-and-upgrade/pages/hardware-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/hardware-requirements.adoc
@@ -345,7 +345,7 @@ For other deployments, separate disks for volumes are also recommended.
 On the {productname} Server, the [command]``mgr-storage-server`` command moves the complete content of the [path]``/var/lib/containers/storage/volumes`` directory to a separate disk and remounts it to [path]``/var/lib/containers/storage/volumes``.
 Optionally, if a second device name is specified, [command]``mgr-storage-server`` moves the content of the [literal]``/var/lib/containers/storage/volumes/var-pgsql`` database directory also to a second separate disk and remounts it to [path]``/var/lib/containers/storage/volumes/var-pgsql``.
 
-Similarily on the {productname} Proxy, the [command]``mgr-storage-proxy`` command moves the complete content of the [path]``/var/lib/containers/storage/volumes`` directory with the Squid cache to a separate disk and remounts it to [path]``/var/lib/containers/storage/volumes``.
+Similarily on the {productname} Proxy, the [command]``mgr-storage-proxy`` command moves the complete content of the [path]``/var/lib/containers/storage/volumes`` directory to a separate disk and remounts it to [path]``/var/lib/containers/storage/volumes``.
 
 
 
