done and drive-by edits

--- a/modules/installation-and-upgrade/pages/container-deployment/suma/server-deployment-vm-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/server-deployment-vm-suma.adoc
@@ -1,5 +1,5 @@
-[[install-vm]]
-= Deploy {productname} {productnumber} Server as a Virtual Machine
+[[install-vm-kvm]]
+= Deploy {productname} {productnumber} Server as a Virtual Machine - KVM
 ifeval::[{uyuni-content} == true]
 :noindex:
 endif::[]
@@ -7,15 +7,17 @@ endif::[]
 This chapter provides the required Virtual Machine settings for deployment of {productname} {productnumber} as an Image.
 KVM will be combined with Virtual Machine Manager (_virt-manager_) as a sandbox for this installation.
 
+
+
+// FIXME: make this section a snippet or move it to a general intro for both,
+//        KVM and VMware
+== Available Images
+
 [IMPORTANT]
 ====
 The preferred method for deploying {productname} {productnumber} Server is to use one of the following available images.
 All tools are included in these images greatly simplifying deployment.
 ====
-
-
-
-== Available Images
 
 Images for {productname} {productnumber} are available at link:https://www.suse.com/download/suse-manager/[{productname} {productnumber} VM images].
 
@@ -108,7 +110,7 @@ image::enter-timezone.png[]
 
 image::root-password.png[]
 
-. Once installation completes login as root.
+. When installation completes log in as root.
 
 . Proceed to the next section.
 
@@ -173,7 +175,7 @@ For more information, see
 * xref:installation-and-upgrade:container-management/persistent-container-volumes.adoc[]
 * xref:administration:troubleshooting/tshoot-container-full-disk.adoc[]
 ====
-. Otherwise run the following command to deploy {productname}:
+. Run the following command to deploy {productname}:
 +
 
 ----
